Added Buttons and refined chat

--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,9 @@
     </div>
 </body>
 <template id='message-template'>
-    <span class='message-wrapper'>
+    <div class='message-wrapper'>
         <section class='message-username'></section>
         <article class='message-content'></article>
-    </span>
+    </div>
 </template>
 </html>
