--- a/html/index.html
+++ b/html/index.html
@@ -10,13 +10,19 @@
     <header>Block and Talk</header>
     <div id="game">
         <canvas id="myCanvas" width="720" height="480"></canvas>
-        <div id="login_box">
+        <div id="login-box">
             <form id="login">
-                Username&nbsp;<input type="text" id="username">
+                Username&nbsp;<input type="text" id="login-username">
                 <input type="submit" value="submit">
             </form>
         </div>
-        <div id="chat_box">
+        <div id="register-box">
+            <form id="register">
+                register&nbsp;<input type="text" id="register-username">
+                <input type="submit" value="submit">
+            </form>
+        </div>
+        <div id="chat-box">
             <ul id='messages'></ul>
         </div>
         <form id='message-form'>
@@ -24,6 +30,8 @@
             <input type='text' id='message-input'>
         </form>
     </div>
+    <div id='login-button'></div>
+    <div id='register-button'></div>
 </body>
 <template id='message-template'>
     <div class='message-wrapper'>
