--- a/html/index.html
+++ b/html/index.html
@@ -8,30 +8,24 @@
 </head>
 <body>
     <header>Block and Talk</header>
-    <div id="game">
-        <canvas id="myCanvas" width="720" height="480"></canvas>
-        <div id="login-box">
+    <div id='game'>
+        <canvas id='myCanvas' height='480' width='720'></canvas>
             <form id="login">
-                Username&nbsp;<input type="text" id="login-username">
+                Username<input type="text" id="login-username">
                 <input type="submit" value="submit">
             </form>
-        </div>
-        <div id="register-box">
-            <form id="register">
-                register&nbsp;<input type="text" id="register-username">
-                <input type="submit" value="submit">
+            <form id='register'>
+                Register<input type='text' id='register-username'>
+                <input type='submit' value='submit'>
             </form>
-        </div>
-        <div id="chat-box">
+        <div id='chat-box'>
             <ul id='messages'></ul>
         </div>
         <form id='message-form'>
+            <input type='test' id='message-input'>
             <button id='message-send'>SEND</button>
-            <input type='text' id='message-input'>
         </form>
     </div>
-    <div id='login-button'></div>
-    <div id='register-button'></div>
 </body>
 <template id='message-template'>
     <div class='message-wrapper'>
