Added more documentation and began work on player list

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header>Block and Talk</header>
+    <div>
+        <div id='user-box'>
+            <ul id='users'></ul>
+        </div>
+    </div>
     <div id='game'>
         <canvas id='myCanvas' height='480' width='720'></canvas>
             <form id="login">
@@ -37,7 +42,7 @@
                     <tr>
                         <td>Re-Enter Password</td>
                         <td><input type='password' id='register-password2'></td>
-                    </td>
+                    </tr>
                     <tr><td></td><td><input type='submit' value='submit'></td></tr>
                 </table>
             </form>
