fixed player box style

--- a/html/index.html
+++ b/html/index.html
@@ -49,8 +49,8 @@
             <ul class='messages' id='global-chat-messages'></ul>
         </div>
         <div id='playerlist-box'>
-            <ul class='players' id='global-chat-players'></ul>
-            <b>Online</b>
+            <strong>Online</strong>
+            <ul id='global-chat-players'></ul>
         </div>
         <form id='message-form'>
             <input type='test' id='message-input' autocomplete='off'>
